@@ -16,6 +16,8 @@ FXException
 + Ported TnFOX to Apple MacOS X (Intel only)
 * Merged FOX v1.4.34
 * Substantially improved python bindings
++ Made FXAtomicInt, and therefore TnFOX, portable to all GCC supported
+architectures
 
 v0.86 2nd April 2006
 -=-=-=-=-=-=-=-=-=-=
